--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -35,10 +35,10 @@ copyright:
     #link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: Ki Beom Kim 
-  verbose: >-
-    Except where otherwise noted, the blog posts on this site are licensed
-    under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
+  #brief: Ki Beom Kim 
+  #verbose: >-
+    #Except where otherwise noted, the blog posts on this site are licensed
+    #under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
 meta: Powered by :PLATFORM with :THEME theme.
 
