--- a/2022-07-18-insert-algorithm.ipynb
+++ b/2022-07-18-insert-algorithm.ipynb
@@ -353,12 +353,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 셸 정렬 \n"
+    "# 셸 정렬 \n",
+    "def shellsort(cont) : \n",
+    "    dist = len(cont) // 2 # 요소 간 거리 지정 \n",
+    "\n",
+    "    while (dist > 0) : # distance 가 0이다 = 정렬이 완료됬다 는 의미다. \n",
+    "        # 하위 부분 리스트 정렬하는 알고리듬 \n",
+    "        for i in range(dist, len(cont)): \n",
+    "            j = i # j 는 하위 부분 리스트 정렬 안 된 부분 가장 왼쪽 원소 의미한다. \n",
+    "            while (j-dist >= 0) and (cont[j] < cont[j-dist]) : \n",
+    "                cont[j], cont[j-dist] = cont[j-dist], cont[j] # 정렬 된 부분 가장 오른쪽 원소와 크기 비교 후 조건 충족하면 서로 교환\n",
+    "                j = j - dist # j 위치 바뀌었기 때문에 j = j-distance 로 j 변수에 값 새로 할당해 준다. \n",
+    "        \n",
+    "        dist = dist // 2 # 보통 셸 알고리듬에서 요소 간 거리는 절반씩 줄여나간다. \n",
+    "\n",
+    "    return cont "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list3 = [26, 17, 20, 11, 23, 21, 13, 18, 24, 14, 12, 22, 16, 15, 19, 25]\n",
+    "shellsort(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
