--- a/2022-07-18-insert-algorithm.ipynb
+++ b/2022-07-18-insert-algorithm.ipynb
@@ -392,7 +392,7 @@
    ],
    "source": [
     "list3 = [26, 17, 20, 11, 23, 21, 13, 18, 24, 14, 12, 22, 16, 15, 19, 25]\n",
-    "shellsort(list3)"
+    "shellsort(list3)\n"
    ]
   },
   {
